monticore-generator/src/test/resources/cocos/invalid/A2102/A2102b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2102;

grammar A2102b {
  external A;

  B implements A;

}

